[project]
name = "digital-assets-portfolio"
version = "0.1.0"
description = "Example app for working with digital assets in a portfolio construction context."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyportfolioopt>=1.5.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "web3>=7.10.0",
]

[tool.uv]
allow-insecure-host = ["pypi.org", "files.pythonhosted.org"]

